--- a/rubyllm_chat_app/app/views/chats/show.html.erb
+++ b/rubyllm_chat_app/app/views/chats/show.html.erb
@@ -40,7 +40,8 @@
           <% end %>
            <p class="text-xs text-gray-400">Model: <%= @chat.model_id %></p>
         </div>
-        <div>
+        <div class="flex space-x-2">
+            <%= link_to "Edit Chat", edit_chat_path(@chat), class: "text-blue-500 hover:text-blue-700 text-sm font-medium" %>
             <%= button_to "Delete Chat", chat_path(@chat), method: :delete, form: { data: { turbo_confirm: "Are you sure you want to delete this chat?" } }, class: "text-red-500 hover:text-red-700 text-sm font-medium" %>
         </div>
       </div>
