--- a/rubyllm_chat_app/app/views/messages/_message.html.erb
+++ b/rubyllm_chat_app/app/views/messages/_message.html.erb
@@ -26,7 +26,9 @@
     <%# Use simple_format for basic line breaks, or consider a Markdown renderer gem %>
     <div id="<%= dom_id(message, :content) %>" class="prose prose-sm max-w-none break-words">
        <%# Render initial content. Streaming will append here. %>
-       <%= simple_format(message.content) %>
+       <%#= simple_format(message.content) %>
+       <%= markdown_to_html(message.content) %>
+
     </div>
   </div>
 <% end %>
