--- a/rubyllm_chat_app/app/views/layouts/_header.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<header class="py-3 px-4 sm:px-6 lg:px-8 border-b border-gray-200 bg-white">
+<header class="py-3 px-4 sm:px-6 lg:px-8 border-b border-gray-700 bg-gray-800">
   <div class="container mx-auto">
-    <h1 class="text-xl font-semibold text-gray-700">
+    <h1 class="text-xl font-semibold text-gray-100">
       Rails8 Turbo Chat <span role="img" aria-label="speech bubble"> v<%= APP_VERSION %> 💬 (<%= Rails.env%>)</span>
     </h1>
   </div>
