--- a/rubyllm_chat_app/app/views/layouts/_header.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
       Rails8 Turbo Chat <span role="img" aria-label="speech bubble"> v<%= APP_VERSION %> 💬 (<%= Rails.env%>)</span>
     </h1>
     <div class="flex items-center space-x-4">
+      <%= link_to "About", about_path, class: "text-blue-400 hover:underline text-sm" %>
       <% if user_signed_in? %>
         <span class="text-gray-400">👋 Hello, <%= current_user.name %>!</span>
         <%= link_to "Edit Profile", edit_user_registration_path, class: "text-blue-400 hover:underline text-sm" %>
