--- a/rubyllm_chat_app/app/views/chats/show.html.erb
+++ b/rubyllm_chat_app/app/views/chats/show.html.erb
@@ -52,7 +52,7 @@
       </div>
 
       <%# Messages Area - Use flex-grow to take available space, overflow-y-auto for scrolling %>
-      <div id="messages" class="flex-grow overflow-y-auto p-4 space-y-4 bg-transparent">
+      <div id="messages" class="flex-grow overflow-y-auto p-4 space-y-4 bg-transparent" data-controller="scroll">
         <%# Render existing messages using the message partial %>
         <%= render @messages %>
         <%# New messages will be appended here by Turbo Streams %>
