--- a/rubyllm_chat_app/app/views/layouts/application.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
 </head>
-<body class="bg-gray-900 text-gray-100 font-sans bg-gradient-to-br from-blue-900 to-purple-900 min-h-screen">
+<body class="bg-gray-900 text-gray-100 font-sans bg-gradient-to-br from-blue-900 to-purple-900 min-h-screen flex flex-col">
   <%= render 'layouts/header' %>
 
-  <main class="container mx-auto mt-4 px-4">
+  <main class="container mx-auto mt-4 px-4 flex-grow">
     <%# Flash Messages - Tailored for Tailwind %>
     <% if notice %>
       <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4" role="alert">
