--- a/rubyllm_chat_app/app/views/pages/config.html.erb
+++ b/rubyllm_chat_app/app/views/pages/config.html.erb
@@ -2,6 +2,7 @@
   <h1 class="text-3xl font-bold mb-8 text-center text-sky-400">⚙️ Application Configuration</h1>
 
   <div class="space-y-3">
+    <%= display_env_variable("APP_VERSION", APP_VERSION) %>
     <%= display_env_variable("RICCARDOS_FAVOURITE_DEV_MODEL", RICCARDOS_FAVOURITE_DEV_MODEL) %>
     <%= display_env_variable("DEFAULT_LLM_MODEL", DEFAULT_LLM_MODEL) %>
     <%= display_env_variable("PROJECT_ID", ENV["PROJECT_ID"]) %>
@@ -52,5 +53,14 @@
         <span class="text-gray-500 italic">Not set or empty</span>
       <% end %>
     </div>
+
+
+    <%# --- RICC_ALLOWED_HOSTS --- %>
+    <h2 class="text-xl font-bold mb-4 text-sky-400">App Metadata:</h2>
+    <div class="flex items-center">
+
+      <div class="text-sm font-medium text-gray-400 mr-2">App Metadata:</div>
+           <pre><%= app_metadata.to_json %></pre>
+
   </div>
 </div>
