--- a/rubyllm_chat_app/app/views/layouts/_footer.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
   <div class="container mx-auto">
     <%= APP_NAME %> v<span class="font-bold text-white"><%= APP_VERSION %></span>
     | 🐙 <%= link_to "GitHub", "https://github.com/palladius/rails8-turbo-chat", class: "text-blue-400 hover:underline" %>
+     <%= link_to '#' + GIT_COMMIT_HASH, "https://github.com/palladius/rails8-turbo-chat/commit/#{GIT_COMMIT_HASH}", class: "text-blue-400 hover:underline font-mono" %>
     <% if defined?(CLOUD_RUN_ENDPOINTS) && CLOUD_RUN_ENDPOINTS[:dev].present? %>
       | 🚀 <%= link_to "Dev", CLOUD_RUN_ENDPOINTS[:dev], class: "text-blue-400 hover:underline" %>
     <% end %>
