--- a/rubyllm_chat_app/app/views/pages/config.html.erb
+++ b/rubyllm_chat_app/app/views/pages/config.html.erb
@@ -7,6 +7,9 @@
     <%= display_env_variable("APP_VERSION", APP_VERSION) %>
     <%= display_env_variable("RICCARDOS_FAVOURITE_DEV_MODEL", RICCARDOS_FAVOURITE_DEV_MODEL) %>
     <%= display_env_variable("DEFAULT_LLM_MODEL", DEFAULT_LLM_MODEL) %>
+    <%= display_env_variable("GIT_COMMIT_HASH", GIT_COMMIT_HASH) %>
+
+
 
     <p> ENV variables: </p>
 
