--- a/rubyllm_chat_app/app/views/pages/config.html.erb
+++ b/rubyllm_chat_app/app/views/pages/config.html.erb
@@ -19,6 +19,7 @@
     <%= display_env_variable("PORT", ENV["PORT"]) %>
     <%= display_env_variable("CLOUD_RUN_ENDPOINT_DEV", ENV["CLOUD_RUN_ENDPOINT_DEV"]) %>
     <%= display_env_variable("CLOUD_RUN_ENDPOINT_PROD", ENV["CLOUD_RUN_ENDPOINT_PROD"]) %>
+    <%= display_env_variable("DATABASE_URL", obfuscate_database_url(ENV["DATABASE_URL"])) %>
 
 
     <%# --- RICC_ALLOWED_HOSTS --- %>
