feat: Add more config checks and improve error visibility

--- a/rubyllm_chat_app/app/views/layouts/application.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <strong>⚠️ Configuration Errors:</strong>
       <ul>
         <% Rails.configuration.x.config_errors.each do |error| %>
-          <li><%= error %></li>
+          <li>🔴 <%= error %></li>
         <% end %>
       </ul>
     </div>
