--- a/rubyllm_chat_app/app/views/chat_cards/index.html.erb
+++ b/rubyllm_chat_app/app/views/chat_cards/index.html.erb
@@ -6,13 +6,14 @@
         <%= f.submit "✨ Start New Chat", class: "bg-blue-700 hover:bg-blue-800 text-white font-bold py-2 px-4 rounded" %>
       <% end %>
       <%= link_to "Go to Chats", chats_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+      <% if params[:show_all] %>
+        <%= link_to "Show Only Chats with Images", root_path, class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" %>
+      <% else %>
+        <%= link_to "Show ALL chats", root_path(show_all: true), class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" %>
+      <% end %>
     <% else %>
-      <%= link_to "Log In / Sign Up", new_user_session_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
-    <% end %>
-    <% if params[:show_all] %>
-      <%= link_to "Show Only Chats with Images", root_path, class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" %>
-    <% else %>
-      <%= link_to "Show ALL chats", root_path(show_all: true), class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" %>
+      <%= link_to "Log In", new_user_session_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-2" %>
     <% end %>
   </div>
   <div class="flex justify-center">
